fixed cart size, position & toggling issues on mobile & large screens

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -10,6 +10,9 @@ body {
   box-shadow: 0 0 5px #787a91;
   background-color: colors.$light-gray;
 
+  // center horizontally when position is fixed
+  left: max(0px, calc((100% - 2050px) / 2));
+
   @apply mx-auto max-w-[2050px] overflow-x-hidden scroll-smooth;
 }
 
@@ -35,12 +38,12 @@ body {
 
   font-size: clamp(1.125rem, 1.5vw + 0.3rem, 1.5rem);
 
-  & .chapter:nth-child(1) h2:nth-of-type(1){
+  & .chapter:nth-child(1) h2:nth-of-type(1) {
     margin-top: 0;
   }
 }
 
-.howto-details #headings{
+.howto-details #headings {
   @media (max-width: 767.98px) {
     display: none;
   }
